    * [fix] #221 CastException when trying to delete a document with _id whose type is String
    * [fix] Browse private key field in configuration
    * [add] #222 Default row limit can be set in server configuration
    * [add] Add Copy Configuration action
    * [add] #175 Import JSON file
    * [add] #216 Stats on collection
    * [add] #220 Stats on database
    * [update] Some shortkeys changed to match with Intellij standard
    * [update] Documents View: Remove double quote on key to improve readbility
    * [update] Explorer panel is usable at IDE start
    * [update] Edition is now in a Dialog
    * [update] Renamed 'Default' Auth. Mecanism to 'Plain' for clarity
    * [update] Set 'SCRAM' Auth. Mecanism as default choice
    * [remove] Auto-connect option when starting IDE

Version 0.11.0
    * [fix] NPE when deleting a collection with short key
    * [fix] Memory issue due to no limit in result
    * [fix] unable to add an empty array in edition
    * [add] Databases and collections are alphabetically ordered
    * [add] Result pagination (memory, not mongo pagination feature)
    * [update] Delete document is now pop-up window on the _id instead of Edition panel
    * [update] replace SSH host and port field by single SSH url field
    * [update] Add Private Key auth method for SSH tunneling
    * [update] Mongo java driver 3.5
    * [update] Server management is accessed from Explorer panel, not from General Settings anymore

Version 0.10.0
    $ [fix] #174 add shortcuts on some actions
    * [fix] #163 and #177 Malformed filter causes IDE freezing
    * [fix] #176 _id can be one of the supported JSON type excepting Array
    * [fix] #173 CodecConfigurationException when using DBRef
    * [fix] Notification message when saving a document
    * [add] #133 Handle DBRef with Navigation (experimental)

Version 0.9
    * [fix] #139 NPE when clicking on Expand/Collapse whereas there is no server configuration set